[gd_scene load_steps=10 format=3 uid="uid://c018g65e14m8k"]

[ext_resource type="Script" path="res://Scripts/Main Menu.gd" id="1_ug8ga"]
[ext_resource type="PackedScene" uid="uid://clw4b1va66fjh" path="res://Scenes/Ball.tscn" id="2_6c7v5"]
[ext_resource type="PackedScene" uid="uid://dqjl3uoweaqwx" path="res://Scenes/Background.tscn" id="3_u6xqf"]
[ext_resource type="PackedScene" uid="uid://coke84qugsdct" path="res://Scenes/Walls/Wall1x2.tscn" id="4_aa1gb"]
[ext_resource type="PackedScene" uid="uid://clxsmqy4tjd1l" path="res://Scenes/Walls/Wall1x3.tscn" id="5_qlrom"]
[ext_resource type="PackedScene" uid="uid://dew8nv7dd1fx" path="res://Scenes/Goal.tscn" id="6_4pvyw"]
[ext_resource type="Texture2D" uid="uid://d16kmaxjbvaor" path="res://Assets/Menu/Icon_Tube.png" id="7_w1jcg"]
[ext_resource type="FontFile" uid="uid://drsbesnuxws12" path="res://Assets/Font/MilkyNice.ttf" id="8_1yb53"]

[sub_resource type="Curve2D" id="Curve2D_xyqk3"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 40, -58, 0, 0, 0, 0, 1045, -59)
}
point_count = 2

[node name="Main Menu" type="Node2D"]
script = ExtResource("1_ug8ga")
ball = ExtResource("2_6c7v5")

[node name="Background" parent="." instance=ExtResource("3_u6xqf")]

[node name="Walls" type="Node2D" parent="."]

[node name="Wall 1x2 1" parent="Walls" instance=ExtResource("4_aa1gb")]
position = Vector2(132, 579)
rotation = -0.820486

[node name="Wall 1x2 4" parent="Walls" instance=ExtResource("4_aa1gb")]
position = Vector2(98, 1669)
rotation = -0.820486

[node name="Wall 1x2 5" parent="Walls" instance=ExtResource("4_aa1gb")]
position = Vector2(991, 1662)
rotation = -2.2708

[node name="Wall 1x3 1" parent="Walls" instance=ExtResource("5_qlrom")]
position = Vector2(970, 807)
rotation = 0.833126
is_moving = true
move_from = Vector2(970, 807)
move_to = Vector2(613, 807)

[node name="Wall 1x2 2" parent="Walls" instance=ExtResource("4_aa1gb")]
position = Vector2(375, 903)
is_rotate = true
rotate_direction = -1

[node name="Wall 1x3 2" parent="Walls" instance=ExtResource("5_qlrom")]
position = Vector2(676, 410)
is_rotate = true

[node name="Wall 1x3 3" parent="Walls" instance=ExtResource("5_qlrom")]
position = Vector2(550, 1700)
rotation = 1.5708

[node name="Wall 1x2 3" parent="Walls" instance=ExtResource("4_aa1gb")]
position = Vector2(867, 1548)
is_rotate = true
is_moving = true
move_from = Vector2(229, 1548)
move_to = Vector2(867, 1548)
move_speed = 1.0

[node name="Holes" type="Node2D" parent="."]

[node name="Goal" parent="Holes" instance=ExtResource("6_4pvyw")]
position = Vector2(797, 1090)

[node name="Goal2" parent="Holes" instance=ExtResource("6_4pvyw")]
position = Vector2(282, 1060)

[node name="Goal3" parent="Holes" instance=ExtResource("6_4pvyw")]
position = Vector2(572, 657)

[node name="Balls" type="Node2D" parent="."]

[node name="BallSpawner" type="Path2D" parent="Balls"]
position = Vector2(0, -1)
curve = SubResource("Curve2D_xyqk3")

[node name="BallSpawnerLocation" type="PathFollow2D" parent="Balls/BallSpawner"]
position = Vector2(40, -58)
rotation = -0.000995024

[node name="BallTimer" type="Timer" parent="Balls/BallSpawner/BallSpawnerLocation"]
autostart = true

[node name="Play" type="TextureButton" parent="."]
offset_left = 434.5
offset_top = 999.0
offset_right = 661.5
offset_bottom = 1225.0
texture_normal = ExtResource("7_w1jcg")

[node name="Title" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 226.0
offset_top = 727.0
offset_right = 870.0
offset_bottom = 849.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_1yb53")
theme_override_font_sizes/font_size = 101
text = "Balling Down"

[connection signal="timeout" from="Balls/BallSpawner/BallSpawnerLocation/BallTimer" to="." method="_on_ball_timer_timeout"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
